[package]
name = "astrometrics"
version = "0.1.5"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/msukanen/astrometrics.git"
keywords = ["astrometrics"]
description = "Some simple (astro)metrics to be."

[lib]
path = "src/lib.rs"
test = true
bench = true
crate-type = ["lib"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }

[badges]
maintenance = { status = "experimental" }

[features]
default = []
# flip on whenever f128 is stable enough (and hardware supported at large)…
f128_stable = ["default"]
# …someday, maybe…
f256_exists = ["f128_stable"]
